<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCotizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/cotizar"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpiar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCotizar"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/registrar"
        app:layout_constraintEnd_toStartOf="@+id/btnCotizar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <TextView
        android:id="@+id/tvwTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/titulo"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCliente"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFolio" />

    <TextView
        android:id="@+id/tvwTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tipo"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/txtCliente" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="138dp"
        android:layout_height="140dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvwTipo"
        tools:visibility="visible">

        <RadioButton
            android:id="@+id/rdbTipo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo1" />

        <RadioButton
            android:id="@+id/rdbTipo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo2" />

        <RadioButton
            android:id="@+id/rdbTipo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/tipo3" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:text="@string/adicional"
        app:layout_constraintStart_toEndOf="@+id/tvwTipo"
        app:layout_constraintTop_toBottomOf="@+id/txtCliente" />

    <CheckBox
        android:id="@+id/chkDetalle2"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:text="@string/acabados"
        app:layout_constraintStart_toStartOf="@+id/chkDetalle3"
        app:layout_constraintTop_toBottomOf="@+id/chkDetalle1" />

    <CheckBox
        android:id="@+id/chkDetalle3"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:text="@string/aire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkDetalle2" />

    <CheckBox
        android:id="@+id/chkDetalle1"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/cocina"
        app:layout_constraintStart_toStartOf="@+id/chkDetalle2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/txtFolio"
        android:layout_width="247dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/folio"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvwTitulo" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/teléfono"
        android:inputType="phone"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>